# protostar

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  data.js  pyproject.toml
.github/: codecov.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
src/protostar/: cli.py  config.py  executor.py  manifest.py  orchestrator.py  system.py  wizard.py
src/protostar/generators/: __init__.py  base.py  cpp.py  embedded.py  latex.py
src/protostar/modules/: __init__.py  base.py  ide_layer.py  lang_layer.py  os_layer.py  system_layer.py  tooling_layer.py
src/protostar/presets/: __init__.py  api.py  astro.py  base.py  cli.py  dsp.py  embedded.py  ml.py  scientific.py
tests/: conftest.py  test_cli.py  test_config.py  test_executor.py  test_exhaustive.py  test_generators.py  test_integration.py  test_manifest.py  test_modules.py  test_orchestrator.py  test_performance.py  test_presets.py  test_system.py  test_wizard.py
tests/fixtures/: base_complex.toml  payload_complex.toml
