[project]
name = "protostar"
version = "0.6.0"
description = "High-velocity, zero-friction environment scaffolding."
readme = "README.md"
authors = [
    { email = "jackson.ferguson0@gmail.com" },
    { name = "Jackson Ferguson" },
]
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.6.3",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "rich-argparse>=1.7.2",
    "tomlkit>=0.14.0",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Repository = "https://github.com/jacksonfergusondev/protostar"
Issues = "https://github.com/jacksonfergusondev/protostar/issues"

[project.scripts]
protostar = "protostar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
ci = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
]
dev = [
    { include-group = "ci" },
    "bump-my-version>=1.2.6",
    "pre-commit>=4.5.1",
]

# ==================================================
# Tool Configuration
# ==================================================

# ---- ruff ---- #

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "T20", "PT", "C4", "D", "RUF", "N", "RET"]
ignore = [
    "E501",
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
]

# Allow ignored variables (e.g. for unpacking)
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["protostar"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["T201", "D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---- mypy ---- #

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
show_error_context = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---- pytest ---- #

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests that perform actual disk I/O and subprocess calls",
    "exhaustive: marks heavy combinatorial tests"
]

[tool.coverage.run]
source = ["src/protostar"]
branch = true

[tool.coverage.report]
omit = ["src/protostar/**/__init__.py"]
show_missing = true
skip_covered = true
fail_under = 90

# ---- bump-my-version ---- #

[tool.bumpversion]
current_version = "0.6.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "chore: bump version {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "# Protostar (v{current_version})"
replace = "# Protostar (v{new_version})"
